==> ghi-electronics/TinyCLR-Ports/Targets/LPC177x_LPC178x/LPC17_I2C.cpp <==
#include <LPC17.h>
#define TOTAL_I2C_CONTROLLERS SIZEOF_ARRAY(i2cSclPins)
#define I2C_TRANSACTION_TIMEOUT 2000 // 2 seconds

const TinyCLR_Api_Info* LPC17_I2c_GetApi() {
    for (auto i = 0; i < TOTAL_I2C_CONTROLLERS; i++) {
        i2cControllers[i].ApiInfo = &i2cApi[i];
        i2cControllers[i].Acquire = &LPC17_I2c_Acquire;
        i2cControllers[i].Release = &LPC17_I2c_Release;
        i2cControllers[i].SetActiveSettings = &LPC17_I2c_SetActiveSettings;       
        i2cControllers[i].WriteRead = &LPC17_I2c_WriteRead;

        i2cApi[i].Author = "GHI Electronics, LLC";
        i2cApi[i].Name = "GHIElectronics.TinyCLR.NativeApis.LPC17.I2cController";
        i2cApi[i].Type = TinyCLR_Api_Type::I2cController;
        i2cApi[i].Version = 0;
        i2cApi[i].Implementation = &i2cControllers[i];
        i2cApi[i].State = &i2cStates[i];

        i2cStates[i].controllerIndex = i;
    }

    return (const TinyCLR_Api_Info*)&i2cApi;
}

void LPC17_I2c_StartTransaction(int32_t controllerIndex) {
    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(controllerIndex == 0 ? LPC17xx_I2C::c_I2C0_Base : ((controllerIndex == 1 ? LPC17xx_I2C::c_I2C1_Base : LPC17xx_I2C::c_I2C2_Base)));

    auto state = &i2cStates[controllerIndex];

    if (!state->writeI2cTransactionAction.repeatedStart || state->writeI2cTransactionAction.bytesTransferred == 0) {
        I2C.I2SCLH = state->i2cConfiguration.clockRate | (state->i2cConfiguration.clockRate2 << 8);
        I2C.I2SCLL = state->i2cConfiguration.clockRate | (state->i2cConfiguration.clockRate2 << 8);

        I2C.I2CONSET = LPC17xx_I2C::STA;
    }
    else {
        I2C.I2CONSET = LPC17xx_I2C::STA;
    }

}

void LPC17_I2c_StopTransaction(int32_t controllerIndex) {
    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(controllerIndex == 0 ? LPC17xx_I2C::c_I2C0_Base : ((controllerIndex == 1 ? LPC17xx_I2C::c_I2C1_Base : LPC17xx_I2C::c_I2C2_Base)));

    I2C.I2CONSET = LPC17xx_I2C::STO;
    I2C.I2CONCLR = LPC17xx_I2C::AA | LPC17xx_I2C::SI | LPC17xx_I2C::STA;

    auto state = &i2cStates[controllerIndex];

    state->currentI2cTransactionAction->isDone = true;
}

TinyCLR_Result LPC17_I2c_Read(const TinyCLR_I2c_Controller* self, uint8_t* buffer, size_t& length, TinyCLR_I2c_TransferStatus& error) {
    int32_t timeout = I2C_TRANSACTION_TIMEOUT;

    auto state = reinterpret_cast<I2cState*>(self->ApiInfo->State);
    auto controllerIndex = state->controllerIndex;

    state->readI2cTransactionAction.isReadTransaction = true;
    state->readI2cTransactionAction.buffer = buffer;
    state->readI2cTransactionAction.bytesToTransfer = length;
    state->readI2cTransactionAction.isDone = false;
    state->readI2cTransactionAction.repeatedStart = false;
    state->readI2cTransactionAction.bytesTransferred = 0;

    state->currentI2cTransactionAction = &state->readI2cTransactionAction;

    LPC17_I2c_StartTransaction(controllerIndex);

    while (state->currentI2cTransactionAction->isDone == false && timeout > 0) {
        LPC17_Time_Delay(nullptr, 1000);

        timeout--;
    }

    if (state->currentI2cTransactionAction->bytesTransferred == length)
        error = TinyCLR_I2c_TransferStatus::FullTransfer;
    else if (state->currentI2cTransactionAction->bytesTransferred < length && state->currentI2cTransactionAction->bytesTransferred > 0)
        error = TinyCLR_I2c_TransferStatus::PartialTransfer;

    length = state->currentI2cTransactionAction->bytesTransferred;

    return timeout > 0 ? TinyCLR_Result::Success : TinyCLR_Result::TimedOut;
}

TinyCLR_Result LPC17_I2c_Write(const TinyCLR_I2c_Controller* self, const uint8_t* buffer, size_t& length, TinyCLR_I2c_TransferStatus& error) {
    int32_t timeout = I2C_TRANSACTION_TIMEOUT;

    auto state = reinterpret_cast<I2cState*>(self->ApiInfo->State);
    auto controllerIndex = state->controllerIndex;

    state->writeI2cTransactionAction.isReadTransaction = false;
    state->writeI2cTransactionAction.buffer = (uint8_t*)buffer;
    state->writeI2cTransactionAction.bytesToTransfer = length;
    state->writeI2cTransactionAction.isDone = false;
    state->writeI2cTransactionAction.repeatedStart = false;
    state->writeI2cTransactionAction.bytesTransferred = 0;

    state->currentI2cTransactionAction = &state->writeI2cTransactionAction;

    LPC17_I2c_StartTransaction(controllerIndex);

    while (state->currentI2cTransactionAction->isDone == false && timeout > 0) {
        LPC17_Time_Delay(nullptr, 1000);

        timeout--;
    }

    if (state->currentI2cTransactionAction->bytesTransferred == length)
        error = TinyCLR_I2c_TransferStatus::FullTransfer;
    else if (state->currentI2cTransactionAction->bytesTransferred < length && state->currentI2cTransactionAction->bytesTransferred > 0)
        error = TinyCLR_I2c_TransferStatus::PartialTransfer;

    length = state->currentI2cTransactionAction->bytesTransferred;

    return timeout > 0 ? TinyCLR_Result::Success : TinyCLR_Result::TimedOut;
}

TinyCLR_Result LPC17_I2c_WriteRead(const TinyCLR_I2c_Controller* self, const uint8_t* writeBuffer, size_t& writeLength, uint8_t* readBuffer, size_t& readLength, bool sendStopAfter, TinyCLR_I2c_TransferStatus& error) {
    int32_t timeout = I2C_TRANSACTION_TIMEOUT;

    auto state = reinterpret_cast<I2cState*>(self->ApiInfo->State);
    auto controllerIndex = state->controllerIndex;

    state->writeI2cTransactionAction.isReadTransaction = false;
    state->writeI2cTransactionAction.buffer = (uint8_t*)writeBuffer;
    state->writeI2cTransactionAction.bytesToTransfer = writeLength;
    state->writeI2cTransactionAction.isDone = false;
    state->writeI2cTransactionAction.repeatedStart = true;
    state->writeI2cTransactionAction.bytesTransferred = 0;

    state->readI2cTransactionAction.isReadTransaction = true;
    state->readI2cTransactionAction.buffer = readBuffer;
    state->readI2cTransactionAction.bytesToTransfer = readLength;
    state->readI2cTransactionAction.isDone = false;
    state->readI2cTransactionAction.repeatedStart = false;
    state->readI2cTransactionAction.bytesTransferred = 0;

    state->currentI2cTransactionAction = &state->writeI2cTransactionAction;

    LPC17_I2c_StartTransaction(controllerIndex);

    while (state->currentI2cTransactionAction->isDone == false && timeout > 0) {
        LPC17_Time_Delay(nullptr, 1000);

        timeout--;
    }

    if (state->writeI2cTransactionAction.bytesTransferred != writeLength) {
        writeLength = state->writeI2cTransactionAction.bytesTransferred;
        error = TinyCLR_I2c_TransferStatus::PartialTransfer;
    }
    else {
        readLength = state->readI2cTransactionAction.bytesTransferred;

        if (state->currentI2cTransactionAction->bytesTransferred == readLength)
            error = TinyCLR_I2c_TransferStatus::FullTransfer;
        else if (state->currentI2cTransactionAction->bytesTransferred < readLength && state->currentI2cTransactionAction->bytesTransferred > 0)
            error = TinyCLR_I2c_TransferStatus::PartialTransfer;
    }

    return timeout > 0 ? TinyCLR_Result::Success : TinyCLR_Result::TimedOut;
}

TinyCLR_Result LPC17_I2c_SetActiveSettings(const TinyCLR_I2c_Controller* self, uint32_t slaveAddress, TinyCLR_I2c_AddressFormat addressFormat, TinyCLR_I2c_BusSpeed busSpeed) {
    uint32_t rateKhz;

    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    if (busSpeed == TinyCLR_I2c_BusSpeed::FastMode)
        rateKhz = 400; // FastMode
    else if (busSpeed == TinyCLR_I2c_BusSpeed::StandardMode)
        rateKhz = 100; // StandardMode
    else
        return TinyCLR_Result::NotSupported;

    uint32_t divider = LPC17xx_I2C::c_I2C_Clk_KHz / (2 * rateKhz);

    auto state = reinterpret_cast<I2cState*>(self->ApiInfo->State);

    state->i2cConfiguration.clockRate = (uint8_t)divider; // low byte
    state->i2cConfiguration.clockRate2 = (uint8_t)(divider >> 8); // high byte
    state->i2cConfiguration.address = slaveAddress;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_I2c_Acquire(const TinyCLR_I2c_Controller* self) {
    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    auto state = reinterpret_cast<I2cState*>(self->ApiInfo->State);
    auto controllerIndex = state->controllerIndex;

    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(controllerIndex == 0 ? LPC17xx_I2C::c_I2C0_Base : ((controllerIndex == 1 ? LPC17xx_I2C::c_I2C1_Base : LPC17xx_I2C::c_I2C2_Base)));

    switch (controllerIndex) {
    case 0:
        LPC17_Interrupt_Activate(I2C0_IRQn, (uint32_t*)&LPC17_I2c_InterruptHandler0, 0);
        break;

    case 1:
        LPC17_Interrupt_Activate(I2C1_IRQn, (uint32_t*)&LPC17_I2c_InterruptHandler1, 0);
        break;

    case 2:
        LPC17_Interrupt_Activate(I2C2_IRQn, (uint32_t*)&LPC17_I2c_InterruptHandler2, 0);
        break;
    }

    if (!LPC17_Gpio_OpenPin(i2cSdaPins[controllerIndex].number) || !LPC17_Gpio_OpenPin(i2cSclPins[controllerIndex].number))
        return TinyCLR_Result::SharingViolation;

    LPC17_Gpio_ConfigurePin(i2cSdaPins[controllerIndex].number, LPC17_Gpio_Direction::Input, i2cSdaPins[controllerIndex].pinFunction, LPC17_Gpio_ResistorMode::Inactive, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);
    LPC17_Gpio_ConfigurePin(i2cSclPins[controllerIndex].number, LPC17_Gpio_Direction::Input, i2cSclPins[controllerIndex].pinFunction, LPC17_Gpio_ResistorMode::Inactive, LPC17_Gpio_Hysteresis::Disable, LPC17_Gpio_InputPolarity::NotInverted, LPC17_Gpio_SlewRate::StandardMode, LPC17_Gpio_OutputType::PushPull);

    // enable the I2c module
    I2C.I2CONSET = LPC17xx_I2C::I2EN;

    // set the slave address
    I2C.I2ADR = 0x7E;

    state->i2cConfiguration.isOpened = true;

    return TinyCLR_Result::Success;
}

TinyCLR_Result LPC17_I2c_Release(const TinyCLR_I2c_Controller* self) {
    if (self == nullptr)
        return TinyCLR_Result::ArgumentNull;

    auto state = reinterpret_cast<I2cState*>(self->ApiInfo->State);
    auto controllerIndex = state->controllerIndex;

    LPC17xx_I2C& I2C = *(LPC17xx_I2C*)(size_t)(controllerIndex == 0 ? LPC17xx_I2C::c_I2C0_Base : ((controllerIndex == 1 ? LPC17xx_I2C::c_I2C1_Base : LPC17xx_I2C::c_I2C2_Base)));

    LPC17_Interrupt_Deactivate(controllerIndex == 0 ? I2C0_IRQn : (controllerIndex == 1 ? I2C1_IRQn : I2C2_IRQn));

    I2C.I2CONCLR = (LPC17xx_I2C::AA | LPC17xx_I2C::SI | LPC17xx_I2C::STO | LPC17xx_I2C::STA | LPC17xx_I2C::I2EN);

    if (state->i2cConfiguration.isOpened) {
        LPC17_Gpio_ClosePin(i2cSdaPins[controllerIndex].number);
        LPC17_Gpio_ClosePin(i2cSclPins[controllerIndex].number);
    }

    state->i2cConfiguration.isOpened = false;

    return TinyCLR_Result::Success;
}

void LPC17_I2c_Reset() {
    for (auto i = 0; i < TOTAL_I2C_CONTROLLERS; i++) {
        LPC17_I2c_Release(&i2cControllers[i]);

        auto state = &i2cStates[i];

        state->i2cConfiguration.address = 0;
        state->i2cConfiguration.clockRate = 0;
        state->i2cConfiguration.clockRate2 = 0;

        state->readI2cTransactionAction.bytesToTransfer = 0;
        state->readI2cTransactionAction.bytesTransferred = 0;

        state->writeI2cTransactionAction.bytesToTransfer = 0;
        state->writeI2cTransactionAction.bytesTransferred = 0;

        state->i2cConfiguration.isOpened = false;
    }
}
